--- a/cppgui.vcxproj.filters
+++ b/cppgui.vcxproj.filters
@@ -28,6 +28,15 @@
     <ClCompile Include="src\webview.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="libs\shell.c">
+      <Filter>libs</Filter>
+    </ClCompile>
+    <ClCompile Include="libs\sqlite3.c">
+      <Filter>libs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\NativeDatabaseAccess.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\APIBridge.h">
@@ -402,6 +411,24 @@
     <ClInclude Include="src\spdlog\sinks\dist_sink.h">
       <Filter>include\spdlog\sinks</Filter>
     </ClInclude>
+    <ClInclude Include="libs\sqlite3.h">
+      <Filter>libs</Filter>
+    </ClInclude>
+    <ClInclude Include="libs\sqlite3ext.h">
+      <Filter>libs</Filter>
+    </ClInclude>
+    <ClInclude Include="DatabaseTypes.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DatabaseTypes.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="src\NativeDatabaseAccess.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="src\INativeDatabaseAccess.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
@@ -410,6 +437,9 @@
     <None Include="src\packages.config" />
     <None Include="src\spdlog\fmt\bundled\fmt.license.rst">
       <Filter>include\spdlog\fmt\bundled</Filter>
+    </None>
+    <None Include="libs\sqlite3.def">
+      <Filter>libs</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -440,9 +470,15 @@
     <Filter Include="docs">
       <UniqueIdentifier>{c04012a8-93a8-450f-a096-a333fb6e8078}</UniqueIdentifier>
     </Filter>
+    <Filter Include="libs">
+      <UniqueIdentifier>{2c821121-941a-4dae-b0fb-09ae7a7af5bb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="src\NativeWindowControls.idl">
+      <Filter>src</Filter>
+    </Midl>
+    <Midl Include="src\DatabaseInterfaces.idl">
       <Filter>src</Filter>
     </Midl>
   </ItemGroup>
