--- a/cppgui.vcxproj
+++ b/cppgui.vcxproj
@@ -206,7 +206,7 @@
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\src\spdlog;C:\Program Files\PostgreSQL\17\include;$(SolutionDir)\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\src\spdlog;C:\Users\bruce\source\cppgui\libs;C:\Program Files\PostgreSQL\17\include;$(SolutionDir)\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
@@ -405,6 +405,9 @@
     <ClCompile Include="src\USBListener.cpp" />
     <ClCompile Include="src\webview.cpp" />
     <ClCompile Include="src\WindowApp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="cppgui.exe.manifest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
